mklibs (0.1.37) UNRELEASED; urgency=low

  * Stop handling the linker as "just another library", and instead make
    sure it gets installed to the path specified in ELF headers (closes:
    #256998; thanks, Adam Conrad).

 -- Colin Watson <cjwatson@debian.org>  Fri, 17 May 2013 11:47:29 +0100

mklibs (0.1.36) unstable; urgency=low

  * Team upload

  [ Colin Watson ]
  * Use AC_CANONICAL_HOST rather than AC_CANONICAL_TARGET.  We do not use
    the results of the latter, and it causes warnings from autoconf due to
    macro ordering relative to AM_INIT_AUTOMAKE.

 -- Christian Perrier <bubulle@debian.org>  Thu, 16 May 2013 18:08:18 +0200

mklibs (0.1.35) unstable; urgency=low

  [ Cyril Brulebois ]
  * Simplify autoreconfing:
    - Add dh-autoreconf build-dep.
    - Add “--with autoreconf” accordingly.
    - Get rid of the “configure” target accordingly.

  [ Colin Watson ]
  * Depend on dpkg-dev for dpkg-architecture (LP: #977347).

 -- Christian Perrier <bubulle@debian.org>  Wed, 26 Dec 2012 07:54:02 +0100

mklibs (0.1.34) unstable; urgency=low

  [ Cyril Brulebois ]
  * Fix FTBFS with gcc 4.7 due to missing <unistd.h> include (closes:
    #667282).

  [ Adam Conrad ]
  * Ignore claims of NEEDED *@ld-linux.so.3 symbols, as this completely
    confuses armhf's double linker situation, and doing so doesn't
    break armel (or anything else with a linker by that SONAME), as
    linkers are treated specially and copied anyway (LP: #984007)

 -- Colin Watson <cjwatson@debian.org>  Tue, 08 May 2012 16:17:59 +0100

mklibs (0.1.33) unstable; urgency=low

  * Adjust the libc_pic directory for multiarch as well.

 -- Colin Watson <cjwatson@debian.org>  Fri, 18 Mar 2011 14:26:36 +0000

mklibs (0.1.32) unstable; urgency=low

  * Add multiarch directories to the default library path if
    dpkg-architecture provides a DEB_HOST_MULTIARCH variable (LP: #737055).

 -- Colin Watson <cjwatson@debian.org>  Fri, 18 Mar 2011 09:58:18 +0000

mklibs (0.1.31) unstable; urgency=low
