@@ -1,6 +1,3 @@
 #! /usr/bin/make -f
 %:
-	dh $@ --builddirectory=build-deb --with autoreconf
-
-override_dh_pysupport:
-	dh_pysupport usr/lib/mklibs
+	dh $@ --builddirectory=build-deb --with=autoreconf,python2
